--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,6 +61,7 @@ header{
     margin-left: 50px;
     line-height: 50px;
 }
+
 .search{
     width: 500px;
    margin-top: 7px;
@@ -105,6 +106,54 @@ header{
     line-height: 50px;
     padding: 0 20px;
 }
+.nav{
+    width:100%;
+    height:360px;
+    position:relative;
+}
+.nav_btn_l{
+    width:20%;
+    height:360px;
+    background:rgb(240, 240, 240);
+    ;position:absolute;
+    top:0;
+    left:0;
+    z-index:99999;
+}
+.nav_btn_l ul{
+    width: 90%;
+    height: 340px;
+    margin: 10px 5%;
+    background: white;
+    border-radius: 5px;
+}
+.nav_btn_r ul{
+    width: 90%;
+    height: 340px;
+    margin: 10px 5%;
+    background: white;
+    border-radius: 5px;
+}
+.nav_btn_l .type_box{
+    width: 100%;
+    height: 460px;
+}
+.layui-btn{
+    float: left;
+}
+#banner{
+    position:absolute;
+    top:0;
+    left:20%;
+}
+.nav_btn_r{
+    width:20%;
+    height:360px;
+    background:rgb(240, 240, 240);
+    position:absolute;
+    top:0;
+    right:0;
+}
 .content .bar{
     width: 100%;
     height: 40px;
@@ -118,7 +167,7 @@ header{
 }
 .banner_img{
     width: 100%;
-    height: 460px;
+    height: 360px;
 }
 .btn_box{
     width: 100%;
@@ -127,6 +176,9 @@ header{
 }
 .layui-btn{
     margin-bottom: 10px;
+}
+main{
+    margin-top: 20px;
 }
 .more_btn{
     width: 400px;
